points, zip codes, new spreadsheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Neighborhood Oil Drilling Health Effects</title>
+        <title>Mapping Our Stories: Oil Drilling and Community Health in South LA</title>
         <!-- hint: remember to change your page title! -->
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="#">
@@ -36,7 +36,6 @@
                 <ul>
                   <li><img src="./img/wellness_logo.png"></img></li> 
                     <li><a id = "ugh" href="index.html">Map</a></li>
-                    <li><a href="survey.html">Take the Survey</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a><u>EN</u>/ES</a></li>
                 </ul>
@@ -44,7 +43,7 @@
             </header>
             
             <div id="title">           
-                <h2><span style="font-weight: bold; color: #242649">Community Health Narratives from Neighborhoods Surrounding Inglewood Oil Field</span></h2>
+                <h2><span style="font-weight: bold; color: #242649">Community Health Narratives from South LA Neighborhoods</span></h2>
               </div>  
 
                           <!-- modal (pop up) -->
@@ -92,7 +91,7 @@
 
         </div>
         <div id="footer">
-            <p>Project created for Asia Am 191A, Spring 2023. Please contact maizahali@ucla.edu with any questions or concerns.</p>
+            <p>Project funded by UCLA Internet Research Initiative. Please contact maizahali@ucla.edu with any questions or concerns.</p>
         </div>
         <script src="js/script.js"></script>
 
