--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>About us</title>
+        <title>About</title>
         <!-- hint: remember to change your page title! -->
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="#">
@@ -33,7 +33,6 @@
                   <ul>
                     <li><img src="./img/wellness_logo.png"></img></li> 
                     <li><a id = "ugh" href="index.html">Map</a></li>
-                    <li><a href="survey.html">Take the Survey</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a><u>EN</u>/ES</a></li>
                   </ul>
@@ -65,7 +64,7 @@
                    <a href="survey.html"><b>Take the survey</b></a> to share your story with your community. 
                 </p>
                 <div id="footer">
-                    <p>Project created for Asia Am 191A, Spring 2023. Please contact maizahali@ucla.edu with any questions or concerns.</p>
+                    <p>Project funded by UCLA Internet Research Initiative. Please contact maizahali@ucla.edu with any questions or concerns.</p>
                 </div>
             </div>
             
