--- a/about.html
+++ b/about.html
@@ -66,6 +66,8 @@
                 <div id="footer">
                     <p>Project funded by UCLA Internet Research Initiative. Please contact maizahali@ucla.edu with any questions or concerns.</p>
                 </div>
+                <!-- idk if this (below) is needed -->
+                <script src="js/script.js"></script> 
             </div>
             
             
