--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
                         </div>
                         <div id="stories" class="tabcontent">
                             <!-- <p>Here is where community stories will be listed for each zip code region.</p>  -->
+                            
+                            <script>
+                                function play() {
+                                  var audio = document.getElementById("audio");
+                                  audio.play();
+                                }
+                              </script>
+                          
+                              <input type="button" value="PLAY" onclick="play()">
+                              <audio id="audio" src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3"></audio>
                         </div>
                     </div>
 
