shading, nav bar, styling

--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
           <header>
               <nav>
                   <ul>
-                    <li><a id = "ugh" href="index.html">Map</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a id = "ugh" href="index.html">MAP</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a><u>EN</u>/ES</a></li>
                   </ul>
                 </nav>         
