readme, nav, logo

--- a/about.html
+++ b/about.html
@@ -29,13 +29,16 @@
 
       <body>
           <header>
-              <nav>
-                  <ul>
-                    <li><a id = "ugh" href="index.html">MAP</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a><u>EN</u>/ES</a></li>
-                  </ul>
-                </nav>         
+            <nav>
+              <ul>
+                  <li><a id = "ugh" href="index.html">MAP</a></li>
+                  <li><a href="about.html">ABOUT</a></li>
+                  <li><a><u>EN</u>/ES</a></li>
+              </ul>
+              <div class="header-logo">
+                  <img src="./img/mapping-logo.png"></img>
+              </div>
+            </nav>        
             </header>
             <div id="title"> 
             <h2> Mapping Our Stories: Community Health Impacts of Neighborhood Oil Drilling </h2>
