--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a><u>EN</u>/ES</a></li>
             </ul>
+            <div class="header-logo">
+                <img src="./img/mapping-logo.png"></img>
+            </div>
           </nav>         
     </header>
 
