--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
                         (but unsealed) neighborhood oil wells. These neighborhoods are often overrepresented by people of color, especially Latinx 
                         and Black populations. <br><br>This mapping tool highlights the voices of individuals interviewed by local community organizations 
                         under the STAND-LA coalition. Interviews are mapped according to each individual's ZIP code. For privacy reasons, exact locational 
-                        information and personal details (including names) have been redacted. <br><br>When interacting with the site, the "Stories" tab 
-                        will showcase all interviews collected for each ZIP code region, while the "Summary" tab will display the race/ethnicity breakdown 
-                        of a specific ZIP code, as well as other key information. The map is shaded according to the intensity of the color 
-                        <span style="font-weight: bold; color: #ad2d2d">red</span>, which depicts the proportional amount of stories collected for each ZIP 
-                        code. Hover over the layers side panel to also map oil and gas wells in the area, according to data provided by CalGEM and prepared
+                        information and personal details (including names) have been redacted. <br><br>When interacting with the site, the <b>"Stories"</b> tab 
+                        will showcase all interviews collected for each ZIP code region, while the <b>"Summary"</b> tab will display data visualizations specific to 
+                        the selected ZIP code. The map is shaded according to the intensity of the color <span style="font-weight: bold; color: #ad2d2d">red</span>, which depicts the proportional amount of stories collected for each ZIP 
+                        code. Hover over the layers side panel to also map <b>oil and gas wells</b> in the area, according to data provided by CalGEM and prepared
                         by the LA County Department of Public Health.<br><br>We hope this website acts as a living archive of community knowledge and a source 
                         of empowerment in the fight against neighborhood oil drilling.
                     </p>
